# fabrica-mcp

./: .gitignore  README.md  fabrica_mcp.py  pyproject.toml
src/fabrica_mcp/: server.py
test/: test_llm_agent.py
