[project]
name = "fabrica-mcp"
version = "0.1.0"
description = "Model Context Protocol server for the Fabrica CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
fabrica-mcp = "fabrica_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
